--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.22.2",
+    "@tanstack/react-query-next-experimental": "^5.22.2",
+    "axios": "^1.6.7",
     "next": "^14.1.0",
+    "next-auth": "^4.24.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.50.1",
     "sass": "^1.71.0"
   },
   "devDependencies": {
+    "@tanstack/react-query-devtools": "^5.23.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
