--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "sass": "^1.71.0"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@tanstack/react-query-devtools": "^5.23.0",
     "@types/node": "^20",
     "@types/react": "^18",
