--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "@tanstack/react-query": "^5.22.2",
     "@tanstack/react-query-next-experimental": "^5.22.2",
     "axios": "^1.6.7",
+    "date-fns": "^3.3.1",
     "next": "^14.1.0",
     "react": "^18.2.0",
-    "react-calendar": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
     "sass": "^1.71.0"
