--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.11",
     "@tanstack/react-query": "^5.22.2",
     "@tanstack/react-query-next-experimental": "^5.22.2",
     "axios": "^1.6.7",
