--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@iconify/react": "^4.1.1",
     "@mui/material": "^5.15.11",
     "@tanstack/react-query": "^5.22.2",
     "@tanstack/react-query-next-experimental": "^5.22.2",
