--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-query-next-experimental": "^5.22.2",
     "axios": "^1.6.7",
     "date-fns": "^3.3.1",
+    "moment": "^2.30.1",
     "next": "^14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
